<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReproducirActivity">

    <TextView
        android:id="@+id/label1_reproducir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/label1_reproducir"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label2_reproducir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label2_reproducir"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1_reproducir" />

    <TextView
        android:id="@+id/label3_reproducir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label3_reproducir"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2_reproducir" />

    <ImageButton
        android:id="@+id/boton1_reproducir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="pausa"
        app:layout_constraintEnd_toStartOf="@+id/boton2_reproducir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label3_reproducir"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/boton2_reproducir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="play"
        app:layout_constraintEnd_toStartOf="@+id/boton3_reproducir"
        app:layout_constraintStart_toEndOf="@+id/boton1_reproducir"
        app:layout_constraintTop_toBottomOf="@+id/label3_reproducir"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/boton3_reproducir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/boton2_reproducir"
        app:layout_constraintTop_toBottomOf="@+id/label3_reproducir"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <Button
        android:id="@+id/boton4_reproducir"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="97dp"
        android:text="@string/boton4_reproducir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton2_reproducir" />

</androidx.constraintlayout.widget.ConstraintLayout>